welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: not found: value Fizz
else {if (a%3==0) {return Fizz}
                          ^